Fixed overflow issues of slideshow.

--- a/FooterStyling.css
+++ b/FooterStyling.css
@@ -5,7 +5,7 @@ footer
     bottom: 0;
     left: 0px;
     right: 0px;
-    min-height: 80px;
+    height: 10%;
     display: flex;
     
     color: lightgoldenrodyellow;
