--- a/HomePage.css
+++ b/HomePage.css
@@ -1,21 +1,27 @@
 body {
     background-color: white;
 }
+
 .Images {
     /*Height and width modifies webpage size?*/
     display: none;
     width: 100%;
+    height: 100%;
     text-align: center;
 }
 
+.Images > img {
+    height:100%;
+}
 
-.SlideshowImages
-{
+.SlideshowImages {
     position: sticky;
     margin-top: 0px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
+    height: 55%;
+    overflow: hidden;
 }
 
 
@@ -27,8 +33,7 @@ body {
     animation-duration: 2s;
 }
 
-@-webkit-keyframes fade
-{
+@-webkit-keyframes fade {
     /*For Chrome*/
     from {
         opacity: .4
