--- a/NavigationStyling.css
+++ b/NavigationStyling.css
@@ -11,7 +11,7 @@ header
     top: 0;
     left: 0;
     right: 0;
-    height: 80px;
+    height: 10%;
     display: flex;
     align-items: center;
     /*box-shadow: 0 0 20px 0 lightgoldenrodyellow;*/
